--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Layout from '../layouts/Layout.astro';
 import LandingHeader from '../components/LandingHeader.astro';
 import HeroSection from '../components/HeroSection.astro';
 import ModelY from '../components/Model-Y.astro'
+import Model3 from '../components/Model-3.astro';
+import Models from '../components/Model-s.astro'
 ---
 
 <Layout title="Tesla Electric">
@@ -17,10 +19,10 @@ import ModelY from '../components/Model-Y.astro'
 			<ModelY/>
 		</div>
 		<div class="snap-center">
-			<HeroSection/>
+			<Model3/>
 		</div>
 		<div class="snap-center">
-			<HeroSection/>
+			<Models/>
 		</div>
 		
 		
