--- a/src/components/Model-Y.astro
+++ b/src/components/Model-Y.astro
@@ -11,9 +11,9 @@
 
         <footer class="flex flex-col flex-grow justify-end pb-20">
             <div class="gap-x-4 flex mx-auto">
-                <a class=" bg-gray  text-sm rounded font-medium text-white px-12 py-2 inline-block transition-colors hover:bg-gray-500 hover:text-black " href="#">Explorar inventario</a>	
+                <a class=" bg-white  text-sm rounded font-medium text-black px-12 py-2 inline-block transition-colors hover:bg-zinc-300 hover:text-black " href="#">Explorar inventario</a>	
 
-                <a class=" bg-white text-sm rounded font-medium px-12 py-2 hover:bg-black hover:text-white transition-colors inline-flex justify-center items-center text-black" href="#">Pedido personalizado </a>	
+                <a class=" bg-black text-sm rounded font-medium px-12 py-2 hover:bg-gray-600 hover:text-black transition-colors inline-flex justify-center items-center text-white" href="#">Pedido personalizado </a>	
                 </div>				
         </footer>
 
